PostgreSQL #5 - added get user information
